fix the video scroll issue, tweaked tab/lable style on mobile devices

--- a/app/sass/partials/_dish.scss
+++ b/app/sass/partials/_dish.scss
@@ -79,9 +79,12 @@
         //overide default tab style
         .ui.pointing.secondary.menu
         .item{
+            display:block;
+            padding:10px 0;
+            text-align:center;
+            font-size:$sm;
             color:$color_grey;
             width:50%;
-            text-align:center;
             border-radius:0;
             &:hover{
                 color:$color_grey;
