--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -288,27 +288,30 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 80, ../sass/partials/_dish.scss */
 #page .ui.pointing.secondary.menu
 .item {
+  display: block;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 0.8rem;
   color: #9b9b9b;
   width: 50%;
-  text-align: center;
   border-radius: 0;
 }
-/* line 86, ../sass/partials/_dish.scss */
+/* line 89, ../sass/partials/_dish.scss */
 #page .ui.pointing.secondary.menu
 .item:hover {
   color: #9b9b9b;
 }
-/* line 90, ../sass/partials/_dish.scss */
+/* line 93, ../sass/partials/_dish.scss */
 #page .active.item {
   border-left: none;
   border-color: #e3151a;
 }
-/* line 95, ../sass/partials/_dish.scss */
+/* line 98, ../sass/partials/_dish.scss */
 #page .dishinfo .item {
   color: #1CBC9C;
   font-size: 0.8rem;
 }
-/* line 113, ../sass/partials/_dish.scss */
+/* line 116, ../sass/partials/_dish.scss */
 #page .header-week {
   position: relative;
   display: block;
@@ -316,7 +319,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   width: 100%;
   text-align: center;
 }
-/* line 119, ../sass/partials/_dish.scss */
+/* line 122, ../sass/partials/_dish.scss */
 #page .header-week:before {
   content: '';
   position: absolute;
@@ -329,7 +332,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   margin: auto;
   background-color: #f7f7f7;
 }
-/* line 132, ../sass/partials/_dish.scss */
+/* line 135, ../sass/partials/_dish.scss */
 #page .header-week:after {
   content: '';
   position: absolute;
@@ -346,61 +349,61 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-/* line 147, ../sass/partials/_dish.scss */
+/* line 150, ../sass/partials/_dish.scss */
 #page .header-week:hover:after {
   width: 50px;
 }
-/* line 155, ../sass/partials/_dish.scss */
+/* line 158, ../sass/partials/_dish.scss */
 #page .menu-dishinfo .content {
   font-size: 0.8rem;
 }
-/* line 157, ../sass/partials/_dish.scss */
+/* line 160, ../sass/partials/_dish.scss */
 #page .menu-dishinfo .content .green {
   color: #1CBC9C;
 }
-/* line 160, ../sass/partials/_dish.scss */
+/* line 163, ../sass/partials/_dish.scss */
 #page .menu-dishinfo .content .yellow {
   color: #FBBD08;
 }
-/* line 166, ../sass/partials/_dish.scss */
+/* line 169, ../sass/partials/_dish.scss */
 #page .tab-dish-detail {
   border: none;
   margin-bottom: 0 !important;
 }
-/* line 171, ../sass/partials/_dish.scss */
+/* line 174, ../sass/partials/_dish.scss */
 #page .dish-detail {
   line-height: 1.2;
 }
-/* line 174, ../sass/partials/_dish.scss */
+/* line 177, ../sass/partials/_dish.scss */
 #page .dish-intro {
   font-size: 0.8rem;
   color: #9b9b9b;
 }
-/* line 178, ../sass/partials/_dish.scss */
+/* line 181, ../sass/partials/_dish.scss */
 #page .dish-ingredients {
   font-size: 0.6rem;
   color: #9b9b9b;
   margin-top: 15px;
 }
-/* line 182, ../sass/partials/_dish.scss */
+/* line 185, ../sass/partials/_dish.scss */
 #page .dish-ingredients .header {
   color: #454545;
 }
-/* line 186, ../sass/partials/_dish.scss */
+/* line 189, ../sass/partials/_dish.scss */
 #page .restaurantInfo {
   font-size: 0.8rem;
   color: #9b9b9b;
 }
-/* line 189, ../sass/partials/_dish.scss */
+/* line 192, ../sass/partials/_dish.scss */
 #page .restaurantInfo .header {
   color: #454545;
   font-size: 1rem;
 }
-/* line 195, ../sass/partials/_dish.scss */
+/* line 198, ../sass/partials/_dish.scss */
 #page .extra.content.horizontal.segments {
   padding: 0;
 }
-/* line 197, ../sass/partials/_dish.scss */
+/* line 200, ../sass/partials/_dish.scss */
 #page .extra.content.horizontal.segments span {
   width: 100%;
   text-align: center;
@@ -552,6 +555,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 #frame {
   height: 100%;
   width: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
 }
 
 /* line 20, ../sass/screen.scss */
